--- a/single-peptide-analysis-Rudney.Rmd
+++ b/single-peptide-analysis-Rudney.Rmd
@@ -1,62 +1,38 @@
 ---
-title: "Single Peptide Results Analysis - UPS Dataset"
+title: "Single Peptide Results Analysis"
+author: "Caleb Easterly and Ray Sajulga"
 output:
   html_document:
-    df_print: paged
+    toc: true
+    toc_depth: 3
+    toc_float: true
+  pdf_document: default
 ---
 
-*Ray Sajulga*
-
-**September 17, 2018**
-
-# Introduction
-Analysis adapted from Caleb Easterly's "Single Peptide Results Analysis" (https://github.com/caleb-easterly/single_peptide) for the UPS dataset.
-
----
-
-#### Packages
-
-```{r}
-library(stringr)
-library(pander)
-library(knitr)
-library(dplyr)
+```{r setup, include=FALSE}
+knitr::opts_chunk$set(echo = TRUE, warning=FALSE, message=FALSE)
 ```
 
-### Peptide Sampling
-Let's randomly select 10 UPS peptides and 10 non-UPS peptides from the UPS1 dataset (replicate #3):
+## Introduction
+
+The single peptide analysis methods and results are contained in this document. 
+
+## Five peptide analysis
+
+The five peptides are as follows:
 
 ```{r}
-
-# Obtains peptide report
-peptide_report <- read.csv("Data/UPS/UPS1/UPS1_03_[Peptide_Shaker_on_data_21__Peptide_Report].tabular",
-         sep = "\t", comment.char="", header = TRUE, stringsAsFactors = FALSE) %>%
-  select(proteins = Protein.s.,
-         sequence = Sequence,
-         counts = X.Validated.PSMs)
-
-# Splits into UPS peptides and non-UPS peptides
-ups_peptides <- filter(peptide_report, grepl("ups", proteins))
-non_ups_peptides <- filter(peptide_report, !grepl("ups", proteins))
-
-# Randomly selects 10 from each category
-set.seed(1003)
-ups_peps_20 <- ups_peptides[sample(nrow(ups_peptides), 10),]
-non_ups_peps_20 <- non_ups_peptides[sample(nrow(non_ups_peptides), 10),]
-twenty_peps <- rbind(ups_peps_20, non_ups_peps_20)
-set.seed(24)
-fivepep_df <- twenty_peps[sample(20,5),]
-fivepep <- fivepep_df$sequence
-
-# Concatenates the two categories and writes it out in a text file for analysis
-write.table(twenty_peps$sequence, "twenty_peptides.txt", 
-            sep="\n", quote=FALSE, row.names=FALSE, col.names=FALSE)
-fivepep_df
+fivepep <- c('AFLPGSLVDTRPVR',
+             'DIAMQIAAVNPTYLNREEVPTEVIEHEK',
+             'DLFKNPIHPYTK',
+             'DVTIEAVNSLYEK',
+             'EVPDWAAQLNENTNVKGLRIAVPK')
 ```
 
-### Unipept
+## Unipept
 
-#### Process
+### Process
+
 * Paste the tabular list of peptides into the Unipept ‘Metaproteomics Analysis’ web application (https://morty.ugent.be/mpa)  
 * Parameters:
     - Equate I and L: FALSE
@@ -66,8 +42,10 @@ fivepep_df
 * Annotate each peptide with only the GO terms that are present in 5% or more of the proteins (percentages are returned in GO term column)
 
 ```{r}
-cov_pat <- "\ \\(.{2,4}\\)"
-uni <- read.csv('results/unipept/UPS1_03-Unipept-20pep-1003seed.csv',
+library(dplyr)
+library(stringr)
+cov_pat <- "\ \\(.{3,4}\\)"
+uni <- read.csv('unipept_20_peptides_result.csv',
                 stringsAsFactors = FALSE) %>%
     select(peptide,
            uni_go_bp = GO..biological.process.,
@@ -77,31 +55,35 @@ uni <- read.csv('results/unipept/UPS1_03-Unipept-20pep-1003seed.csv',
     mutate(uni_go_bp = str_replace_all(string = uni_go_bp, pattern = cov_pat, replacement = ""),
            uni_go_mf = str_replace_all(string = uni_go_mf, pattern = cov_pat, replacement = ""),
            uni_go_cc = str_replace_all(string = uni_go_cc, pattern = cov_pat, replacement = ""))
+
 ```
 
 
+## eggNOG mapper
 
-### eggNOG mapper
 * Use the Galaxy version of eggNOG mapper, on Galaxy-P
 * Parameters:
     - Annotation type: DIAMOND
     - Scoring matrix and gap costs: PAM30, 9 and 1
-    - Taxonomic Scope: Mammals
+    - Taxonomic Scope: Bacteria
     - Orthologs: use all orthologs
     - Gene Ontology evidence: use non-electronic terms
     - Seed Orthology Search Options
         - Min e-value: 200000
         - Min bit score: 20
 * Download and compare GO terms
-  
+
+
 ```{r}
-em <- read.delim("results/eggNOG/eggnog_mapper_20_sequences_results_seed-1003.tabular",
+em <- read.delim("eggnog_mapper_20_sequences_results.tabular",
                  stringsAsFactors = FALSE,
                  header=FALSE) %>%
     select(peptide = V1, em_prot = V2, em_go = V6, em_gene = V5, em_descript = V13) %>%
     filter(peptide %in% fivepep) %>%
     mutate(em_go = str_replace_all(em_go, pattern = ",", replacement = "; "))
 ```
+
+
 ## BLASTP against UniProt
 
 
@@ -121,10 +103,10 @@ em <- read.delim("results/eggNOG/eggnog_mapper_20_sequences_results_seed-1003.ta
 ```{r}
 peptide <- rep(0, 5)
 blast_go <- rep(0, 5)
-files <- list.files('results/uniprot_blastp')
+files <- list.files('uniprot_blastp_outputs')
 for (i in 1:5){
     peptide[i] <- fivepep[i]
-    result <- read.delim(paste('results/uniprot_blastp/', paste(fivepep[i], '.tab', sep=""), sep="/"),
+    result <- read.delim(paste('uniprot_blastp_outputs', paste(fivepep[i], '.tab', sep=""), sep="/"),
                    stringsAsFactors = FALSE,
                    na.strings = c("", "NA", "NaN"))
     gos <- table(unlist(str_split(result$Gene.ontology.IDs, "; ")))/50
@@ -133,28 +115,23 @@ for (i in 1:5){
 blast <- data.frame(peptide, blast_go, stringsAsFactors = FALSE)
 ```
 
-### MetaGOmics
+
+## MetaGOmics
 
 * Upload HOMD to metaGOmics
 * Parameters:
     - Uniprot database: Uniprot sprot
     - Blast e-value cutoff: 1e-10
     - Use only top hit?: TRUE
-* Result URL: https://www.yeastrc.org/metagomics/viewUploadedFasta.do?uid=qeZUp8gtIJDc4Sgh
+* Result URL: https://www.yeastrc.org/metagomics/viewUploadedFasta.do?uid=42jgJAcLHHZBoRQk 
 * One-by-one, upload peptides and run
 * Download results individually, combine into table
 
-```{r}
-# Creates the input files for metaGOmics i.e., single peptide with spectral count (# of validated PSMs)
-#go_input <- select(fivepep_df, sequence, counts)
-#for (i in 1:nrow(go_input)){
-#  write.table(go_input[i,], paste('Data/metaGOmics/', go_input[i,]$sequence,".txt", sep=""), 
-#            sep="\t", eol = "\r\n", quote=FALSE, row.names=FALSE, col.names=FALSE)
-#}
 
+```{r}
 peptide <- rep(0, 5)
 mg_go <- rep(0, 5)
-dir <- 'results/metaGOmics/'
+dir <- 'metaGOmics_single_peptides_outputs/'
 files <- list.files(dir)
 for (i in 1:5){
     peptide[i] <- fivepep[i]
@@ -169,13 +146,12 @@ mg <- data.frame(peptide, mg_go, stringsAsFactors = FALSE)
 ```
 
 
-### Combine all of the results:
+## Combine all of the results:
+
 ```{r}
-pepprots <- select(peptide_report, proteins, peptide = sequence) %>%
-  filter(peptide %in% fivepep)
-all_results <- plyr::join_all(list(pepprots, em, blast, mg, uni), by = "peptide")
-all_results
+all_results <- plyr::join_all(list(em, blast, mg, uni), by = "peptide")
 ```
+
 All of the results are below:
 
 ```{r results = 'asis'}
@@ -185,12 +161,11 @@ pander::pander(all_results, split.cell = 80, split.table = Inf)
 ```
 
 ## Let's go through the peptides one-by-one
+### AFLPGSLVDTRPVR
 
 Here, BLAST and Unipept give the same four GO terms:
 
-
 ```{r}
-all_results[1, 'peptide']
 buni <- all_results[1, 'blast_go']
 buni
 ```
